@@ -62,11 +62,11 @@ cd ../glassplayer-0.6.1
 make install DESTDIR=$RPM_BUILD_ROOT
 cd ../%{name}-%{version}
 make install DESTDIR=$RPM_BUILD_ROOT
-cat web/glassplayer.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/glassplayer.js
-cat web/ipsystem.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/ipsystem.js
-cat web/navbar.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/navbar.js
-cat web/refresh.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/refresh.js
-cat web/utils.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/utils.js
+cat src/web/glassplayer.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/glassplayer.js
+cat src/web/ipsystem.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/ipsystem.js
+cat src/web/navbar.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/navbar.js
+cat src/web/refresh.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/refresh.js
+cat src/web/utils.js | helpers/jsmin > $RPM_BUILD_ROOT@localstatedir@/utils.js
 mkdir -p $RPM_BUILD_ROOT/etc
 cp conf/webhost.conf $RPM_BUILD_ROOT/etc/webhost.conf
 mkdir -p $RPM_BUILD_ROOT/etc/sysconfig
